# pikoBox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: piko.hpp
include/piko/: animation.hpp  assets.hpp  audio.hpp  audioClip.hpp  cam.hpp  component.hpp  event.hpp  font.hpp  input.hpp  logger.hpp  math.hpp  physics.hpp  renderer.hpp  scene.hpp  shader.hpp  sprite.hpp  time.hpp
include/piko/components/: collidableComp.hpp  controllerComp.hpp  drawableComp.hpp  scriptComp.hpp
src/: assets.cpp  audio.cpp  cam.cpp  engine.cpp  font.cpp  global.hpp  input.cpp  math.cpp  physics.cpp  renderer.cpp  scene.cpp
src/assets/: animation.cpp  shader.cpp  sprite.cpp
src/components/: collidableComp.cpp  component.cpp  controllerComp.cpp  drawableComp.cpp  scriptComp.cpp
src/renderer/: renderer.cpp  shader.cpp  sprite.cpp
